tests/models/enum/named/string/fail/default.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(default = 1)]
        value: String
    },
}
fn main() {}
